# nic-api-rust

./: .gitignore  Cargo.toml  README.md
examples/: basic_usage.rs
src/: auth.rs  client.rs  error.rs  lib.rs  models.rs
